# ssos

./: .gitignore  AGENTS.md  CLAUDE.md  COGNITO_GOOGLE_SETUP.md  COGNITO_HOSTED_UI_SETUP.md  GOOGLE_LOGIN_SETUP.md  INDEX.md  KMS_SETUP.md  PROJECT_INDEX.json  PROJECT_INDEX.md  PROJECT_OVERVIEW.md  QUICKSTART.md  README.md  start_dev.sh
.claude/agents/: backend-dev.md  frontend-dev.md  reviewer.md
.claude/skills/ssos/: SKILL.md
.github/: AGENTS.md
.github/workflows/: deploy-backend.yml  deploy-frontend.yml
backend/: .env.example  .gitignore  AGENTS.md  PROJECT_STRUCTURE.md  README.md  SETUP.md  SUMMARY.md  pyproject.toml  reset_db.py
backend/app/: AGENTS.md  __init__.py  config.py  main.py
backend/app/api/: AGENTS.md  announcements.py  auth.py  clubs.py  events.py  fees.py  guests.py  matches.py  members.py  ocr.py  rankings.py  seasons.py  sessions.py  users.py
backend/app/core/: AGENTS.md  __init__.py  dependencies.py  security.py  timezone.py
backend/app/models/: AGENTS.md  __init__.py  announcement.py  base.py  club.py  event.py  fee.py  guest.py  match.py  member.py  ranking.py  schedule.py  season.py  user.py
backend/app/schemas/: AGENTS.md  __init__.py  club.py  event.py  match.py  member.py  pagination.py  ranking.py  schedule.py  season.py  user.py
backend/app/services/: AGENTS.md  ai_matching_service.py  auth_service.py  cognito_service.py  matching_service.py  ocr_service.py
backend/migrations/: AGENTS.md
backend/migrations/models/: 0000_init.py  0002_20260105154513_add_season_model.py  0003_20260111140810_add_club_join_settings.py  0004_20260111143133_add_guest_member_link_and_member_role_guest.py  0005_20260131194857_datetime_timezone_refactor.py  0_init.py  1_20251213160421_add_guest_and_participant_categories.py  6_20260131211158_add_break_warmup_duration.py
backend/tests/: AGENTS.md  conftest.py  test_fixes.py  test_matching_service.py  test_models.py  test_schemas.py  test_security.py  test_timezone.py
claudedocs/: API_REFERENCE.md  BACKEND_ARCHITECTURE.md  DATA_MODEL.md  FRONTEND_ARCHITECTURE.md  PROJECT_INDEX.md  REPO_INDEX.md
frontend/: .env  AGENTS.md  CHECKLIST.md  INSTALL.md  PROJECT_STRUCTURE.md  QUICKSTART.md  README.md  SUMMARY.md  eslint.config.js  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: AGENTS.md  App.vue  main.js
frontend/src/api/: AGENTS.md  auth.js  clubs.js  events.js  guests.js  index.js  matches.js  members.js  ocr.js  rankings.js  (+3 more)
(+60 files in other folders)
